# BFXRpy

./: audio_viz.py  bfxr.py  dialogs.py  generator.py  main.py  main_original.py  params.py  readme.md  scene.bfxr  spectrodemo.py  tag_manager.py  tagspace.txt  ui_components.py  uidemo.py  uitest.py
Pure_C/: CMakeLists.txt  Makefile.old  Makefile.win.old  bfxr  bfxr.cfg  bfxr_cli  bfxr_config.c  bfxr_config.h  bfxr_fft.c  bfxr_fft.h  bfxr_file.c  bfxr_file.h  bfxr_generator.c  bfxr_generator.h  bfxr_gui  bfxr_params.c  bfxr_params.h  bfxr_ui.c  bfxr_ui.h  bfxr_vis.c  bfxr_vis.h  bfxr_wav.c  bfxr_wav.h  bfxrc  build.bat  build.sh  build_test.sh  gui.c  lastscene.bfxr  main.c  os_util.c  os_util.h  preset.bfxr  scene.bfxr  test_build.sh
